# vpn

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  compose.yaml  hamali_full_src.tgz  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
bot/: .env.hamali.example  tariffs.hamali.json
bot/branding/: texts.ru.md
docs/: BOT_BEHAVIOR.md  CONTROL_SERVER.md  DEPLOY.md  HYSTERIA_NODES.md  MOBILE_NETWORK_RUNBOOK.md  NODE_PROTOCOLS.md  NODE_TEST_PLAN.md  OPERATIONS_PLATFORM.md
infra/: Caddyfile  backup-offsite.sh  backup.sh  bootstrap-control.sh  configure-secrets.sh  configure-telegram.sh  deploy-hamalivpn.sh  diagnose-latency.sh  diagnose-mobile-path.sh  external-uptime-monitor.py  harden-ssh.sh  install-node.sh  install-remnawave.sh  location-failover.conf  monitor.sh  node-watchdog.sh  remove-node.sh  tune-network.sh  verify-backup-restore.sh  verify-local-backup-restore.sh  verify-remnawave-token.sh
infra/hysteria/: server.yaml.example
infra/sshd/: 99-hamali-hardening.conf  sshd_config
infra/systemd/: hamali-external-uptime.service  hamali-external-uptime.timer  hamali-offsite-backup.service  hamali-offsite-backup.timer  hamali-restore-drill.service  hamali-restore-drill.timer  hamali-sub-injector-failover.conf  hamali-sub-injector.service  hamalivpn-backup.service  hamalivpn-backup.timer  hamalivpn-local-restore-drill.service  hamalivpn-local-restore-drill.timer  hamalivpn-monitor.service  hamalivpn-monitor.timer  hamalivpn-node-watchdog.service  hamalivpn-node-watchdog.timer  sub-injector.service
landing/: index.html
migrations/: env.py
migrations/versions/: 20260622_0001_initial.py  20260623_0002_subscription_health.py  20260627_0003_portal_commercial_hardening.py  20260701_0004_subscription_device_slots.py  20260719_0005_integration_nodes.py  20260720_0006_operations_platform.py  20260720_0008_reseller_key_batches.py  (+7 more)
portal-webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: conftest.py  test_admin_keys_api.py  test_bot_ui.py  test_deeplinks.py  test_device_limits.py  test_device_slots.py  test_integration_nodes.py  test_maintenance_notifications.py  test_operations_platform.py  test_operations_scripts.py  test_platega_payments.py  test_portal_api_health.py  test_portal_billing.py  test_remnawave_client.py  test_reseller_key_batches.py  test_sub_injector.py  test_subscription_health.py  test_templates.py  test_tma_api.py  test_trial_flow.py
(+53 files in other folders)
