[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hamalivpn-control"
version = "0.1.0"
description = "HamaliVpn control plane, Telegram bot and customer connection portal"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "aiogram>=3.29,<4",
  "aiosqlite>=0.21,<1",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "qrcode[pil]>=8.2,<9",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hamalivpn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
  # FastAPI/aiogram intentionally declare dependency/filter factories in signatures.
  "B008",
  # Ruff's formatter deliberately leaves long URLs and translated UI strings intact.
  "E501",
]

[tool.ruff.lint.per-file-ignores]
# This legacy aggregate module is being split into routers incrementally; imports
# remain next to the route groups they support to avoid a risky all-at-once move.
"src/hamalivpn/api.py" = ["E402"]
